--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,11 +1,28 @@
-﻿@model RestaurantAPI.Models.Restaurant
-
+﻿@model RestaurantAPI.ViewModels.HomeIndexViewModel
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
 </head>
 <body>
-    <h1>Index VIEW</h1>
-    <p>@Model.Name<p>
+    <h1>@Model.CurrentMessage</h1>
+   
+    <div>
+        <table>
+            @foreach(var restaurant in Model.Restaurants)
+            {
+             <tr>
+                <td>@restaurant.Id</td>
+                <td>@restaurant.Name</td>
+                 <td>
+                     <a href="/home/details/@restaurant.Id"> Details </a>
+                     @Html.ActionLink("Go", "Details", new {id = restaurant.Id })
+                     <a asp-action="Details" asp-route-id="@restaurant.Id">More</a>
+               </td>
+             </tr>
+            }
+        </table>
+        <a asp-action="Create">Add Restaurant</a>
+
+    </div>
     </body>
 </html>
